--- a/tour-agency/src/styles/main_styles.css
+++ b/tour-agency/src/styles/main_styles.css
@@ -319,7 +319,7 @@ body{
 	color:#14183E;
 	font-weight: bold;
 	line-height: 50px;
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 }
 .destinations-cards-container{
 	display: flex;
@@ -332,28 +332,66 @@ body{
 	background-color: #fff;
 	width: 315px;
 	height: 457px;
-	padding: 40px 25px;
+	padding: 0px 0px 40px 0px;
 	border-radius: 24px;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 	position: relative;
-	text-align: left;
 
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	justify-content: flex-start;
 	flex-direction: column;
-	margin-bottom: 30px;
+	align-items: space-around;
+	height: 100%;
+
+	margin-bottom: 20px;
 }
 .destination-card:hover{
 	transform:translateY(-10px);
-	box-shadow: 0 30px 60px rgba(255, 174, 1, 0.648);
+	box-shadow: 0px 30px 60px rgba(255, 174, 1, 0.648);
 	background-color: #fffaf0;
+}
+.destination-card-title{
+	font-family: "Poppins", serif;
+	font-size: 18px;
+	font-weight: 600;
+	color:#5E6282;
+	letter-spacing: 2px;
+	text-transform: uppercase;
 }
 .destination-image {
 	width: 100%;
 	height: 200px;
-	border-radius: 24px;
+	border-radius: 24px 24px 0 0;
 	margin-bottom: 20px;
 	object-fit: cover;
+}
+.destination-card-title,
+.destination-card-price,
+.destination-card-duration{
+	font-family: "Poppins", serif;
+	font-size: 16px;
+	font-weight: 400;
+	color:#5E6282;
+	margin: 10px 20px 0px 20px;
+}
+.destination-card-title{
+	margin-top: 10px;
+}
+.destination-card-price{
+	align-self: flex-end;
+	padding-left: 10px;
+}
+.destination-card-duration{
+	display: flex;
+  align-items: center;
+  color: #5E6282;
+  font-size: 14px;
+  margin-top: auto;
+}
+.destination-card-info{
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin-bottom: 10px;
 }
