--- a/tour-agency/src/styles/main_styles.css
+++ b/tour-agency/src/styles/main_styles.css
@@ -303,6 +303,9 @@ body{
 	padding: 100px 20px;
 	text-align: center;
 	background-color: #fff;
+	padding: 80px 20px;
+	gap: 40px;
+	flex-wrap: wrap;
 }
 .destination-subtitle{
 	font-family: "Poppins", serif;
@@ -394,4 +397,237 @@ body{
 	justify-content: space-between;
 	width: 100%;
 	margin-bottom: 10px;
+}
+/*Travel Points Section*/
+.travel-points-section{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0px 60px;
+	flex-wrap: wrap;
+}
+.travel-points-section-left,
+.travel-points-section-right {	padding: 20px;
+}
+
+.travel-point-subtitle{
+	font-family: 'Poppins', serif;
+	font-size: 18px;
+	color: #5E6282;
+	font-weight: 500;
+	margin-bottom: 5px;
+}
+.travel-point-title{
+	font-family: 'Volknov', serif;
+	font-size: 50px;
+	color: #14183E;
+	font-weight: bold;
+	line-height: 50px;
+	margin-bottom: 30px;
+}
+.travel-point-steps{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 40px;
+}
+.travel-point-steps img{
+	width: 48px;
+	height: 48px;
+	object-fit: contain;
+}
+.travel-point-step-info{
+	max-width: 400px;
+}
+.travel-point-step-title{
+	font-family: 'Poppins', serif;
+	font-size: 16px;
+	color: #5E6282;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+.travel-point-step-description{
+	font-family: 'Poppins', serif;
+	font-size: 16px;
+	color: #5E6282;
+}
+.trip-card-container{
+	background-color: #fff;
+	border-radius: 24px;
+	box-shadow: 0px 20px 40px rgba(89,177,230, 0.5);
+	width: 370px;
+	height: 400px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+
+}
+.travel-point-card-image{
+	width: 100%;
+	height: 161px;
+	border-radius: 16px;
+	object-fit: cover;
+	margin-bottom: 20px;
+}
+.trip-card-content{
+	display: flex;
+	flex-direction: column;
+}
+.trip-card-title{
+	font-family: 'Poppins', serif;
+	font-size: 18px;
+	font-weight: 500;
+	color: #080809;
+	margin-bottom: 10px;
+}
+.trip-card-dates{
+	font-family: 'Poppins', serif;
+	font-size: 14px;
+	color: #84829A;
+	margin-bottom: 10px;
+}
+.trip-card-icons{
+	display: flex;
+	gap: 10px;
+	margin-bottom: 20px;
+}
+.trip-card-icon{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	font-size: 18px;
+	width: 36px;
+	height: 36px;
+	color: #84829A;
+	border: 1.5px solid #f5f5f5;
+	border-radius: 50%;
+	background-color: #f5f5f5;
+}
+.trip-ticket-bought{
+	display: flex;
+	align-items: center;
+	gap: 8px;
+
+	font-family: 'Poppins', serif;
+	font-size: 14px;
+	color: #84829A;
+	margin-bottom: 10px;
+}
+/*Testimonials Section*/
+.testimonials-section{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0px 300px;
+	gap: 40px;
+	background-color: #fff;
+}
+.testimonials-section-left,
+.testimonials-section-right{
+	padding: 20px;
+}
+.testimonials-section-left{
+	max-width: 400px;
+}
+.testimonials-subtitle{
+	font-family: 'Poppins', serif;
+	font-size: 18px;
+	color: #5E6282;
+	font-weight: 500;
+	margin-bottom: 10px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+
+}
+.testimonials-title{
+	font-family: 'Volknov', serif;
+	font-size: 50px;
+	color: #14183E;
+	font-weight: bold;
+	line-height: 1.2;
+	margin-bottom: 40px;
+	width: 400px;
+}
+.testimonial-dots{
+	display: flex;
+	gap:10px;
+}
+.dot{
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background-color: #cfcfcf;
+	transition: background-color 0.3s ease;
+}
+.dot.active{
+	background-color: #39425D;
+}
+.testimonials-section-right{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #f9f9f9;
+  border-radius: 24px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  max-width: 700px;
+  gap: 20px;
+	position: relative;
+}
+.testimonial-card-img{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	object-fit: cover;
+	margin-bottom: 20px;
+	border: 4px solid white;
+}
+.testimonial-card-info{
+	flex: 1;
+	padding-left: 100px;
+}
+.testimonial-card-description{
+	font-family: 'Poppins', serif;
+	font-size: 16px;
+	color: #5E6282;
+	margin-bottom: 20px;
+}
+.testimonial-card-name{
+	font-family: 'Poppins', serif;
+	font-size: 18px;
+	color: #5E6282;
+	font-weight: 600;
+	margin-bottom: 5px;
+}
+.testimonial-card-city{
+	font-family: 'Poppins', serif;
+	font-size: 14px;
+	color: #5E6282;
+	font-weight: 400;
+}
+.testimonial-card-arrows{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	margin-top: 30px;
+}
+.testimonial-arrow-left,
+.testimonial-arrow-right{
+	border: none;
+  background: #e0e0e0;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+.testimonial-arrow-left:hover,
+.testimonial-arrow-right:hover{
+	background: #c0c0c0;
 }
