--- a/tour-agency/src/styles/main_styles.css
+++ b/tour-agency/src/styles/main_styles.css
@@ -522,7 +522,7 @@ body{
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
-	padding: 0px 300px;
+	padding: 20px 100px;
 	gap: 40px;
 	background-color: #fff;
 }
@@ -631,3 +631,93 @@ body{
 .testimonial-arrow-right:hover{
 	background: #c0c0c0;
 }
+
+@media (max-width: 768px) {
+	.testimonials-section{
+		flex-direction: column;
+		padding: 0px 20px;
+	}
+	.testimonials-section-right{
+		max-width: 100%;
+	}
+	.testimonials-section-left{
+		max-width: 100%;
+	}
+}
+/*Sponsors Section*/
+.sponsors-section{
+	overflow: hidden;
+	padding: 40px 0;
+	background-color: #fff;
+	display: flex;
+	justify-content: center;
+}
+.sponsors-container{
+	width: 80%;
+	max-width: 1140px;
+}
+.sponsor-img{
+height: 40px;
+margin: 0 40px;
+object-fit: contain;
+opacity: 0.8;
+transition: transform 0.3s ease, opacity 0.3s ease;
+}
+.sponsor-img:hover{
+	transform: scale(1.1);
+	opacity: 1;
+}
+/*Newsletter Section*/
+.newsletter-section{
+	padding: 100px 20px;
+	text-align: center;
+	background-color: rgb(223, 215, 249);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 24px 0px 0px 24px;
+	margin: 0px 0px 0px 20px;
+	box-shadow: 10px 10px 30px rgba(223, 215, 249, 1) ;
+}
+.newsletter-title{
+	font-family: 'Poppins', serif;
+	font-size: 33px;
+	color: #5E6282;
+	font-weight: 600;
+	margin-bottom: 50px;
+}
+.newsletter-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+.newsletter-input-container{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 15px;
+}
+.newsletter-input {
+  padding: 12px 20px;
+  border: none;
+  border-radius: 10px;
+  width: 280px;
+  font-size: 16px;
+}
+.newsletter-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: #ff7f50;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+.newsletter-button:hover {
+		background-color: #f56c3c;
+	}
